--- a/dashboard.html
+++ b/dashboard.html
@@ -885,6 +885,6 @@ async function handleLogout() {
    
     </script>
     
-    <script src="js/api.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
