--- a/index.html
+++ b/index.html
@@ -873,6 +873,6 @@
         </div>
     </footer>
     
-    <script src="js/api.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
