--- a/programs.html
+++ b/programs.html
@@ -845,6 +845,6 @@ requireAuth();
         });
     </script>
     
-    <script src="js/api.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
