--- a/progress.html
+++ b/progress.html
@@ -880,6 +880,6 @@ requireAuth();
         });
     </script>
     
-    <script src="js/api.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
