--- a/register.html
+++ b/register.html
@@ -358,7 +358,7 @@
         </div>
     </div>
 
-    <script src="js/api.js"></script>
+    <script src="api.js"></script>
     <script>
         // Redirect if already logged in
         if (isAuthenticated()) {
