Reorder script tags in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -967,7 +967,8 @@ body > div[style*="position:fixed"] {
         </main>
     </div>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="api.js"></script>
+   <script src="api.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script>
         // Toggle mobile sidebar
         function toggleSidebar() {
